@startuml

title __UICOMPONENT's Class Diagram__\n

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      class AlertMessage {
          - title : String
          - detail : String
          + AlertMessage()
          + getTitle()
          + getDetail()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      class DashBoardProgressView {
          - paint : Paint
          - paintIndex : Paint
          - textPaint38 : Paint
          - textPaint20 : Paint
          - textPaint60 : Paint
          - rectF : RectF
          - rectF2 : RectF
          - rotation : float
          - score : double
          - scoreLever : int
          - reguSizeX : float
          - reguSizeY : float
          - width : float
          - height : float
          - mContext : Context
          + DashBoardProgressView()
          + DashBoardProgressView()
          + DashBoardProgressView()
          - initPaint()
          - initPaintIndex()
          - initTextPaint38()
          - initTextPaint20()
          - initTextPaint60()
          - initRectF()
          + refreshScore()
          - getMeasuredSize()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      class DashBoardView {
          + DashBoardView()
          + DashBoardView()
          # onDraw()
          # onMeasure()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      class PointView {
          + PointView()
          + PointView()
          # onDraw()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      class ScoreTextView {
          + ScoreTextView()
          + ScoreTextView()
          # onDraw()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      class RouteSchematicDiagramLayout {
          - textureMapView : TextureMapView
          - textView : TextView
          + RouteSchematicDiagramLayout()
          + getTextureMapView()
          + getTextView()
          + getRouteData()
          + setRouteData()
          + chooseView()
          + setOnClickListener()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      class ScrollTextView {
          - mBannerTV1 : TextView
          - mBannerTV2 : TextView
          - handler : Handler
          - isShow : boolean
          - startY1 : int
          - endY1 : int
          - startY2 : int
          - endY2 : int
          - runnable : Runnable
          - list : List<String>
          - position : int
          - offsetY : int
          - hasPostRunnable : boolean
          + ScrollTextView()
          + ScrollTextView()
          + ScrollTextView()
          + getList()
          + setList()
          + startScroll()
          + stopScroll()
      }
    }
  }
  

  DashBoardProgressView -up-|> FrameLayout
  DashBoardProgressView o-- PointView : pointView
  DashBoardProgressView o-- ScoreTextView : scoreTextView
  DashBoardProgressView o-- DashBoardView : dashBoardView
  DashBoardProgressView +-down- DashBoardView
  DashBoardProgressView +-down- PointView
  DashBoardProgressView +-down- ScoreTextView
  DashBoardView -up-|> View
  BaseSavedState -up-|> AbsSavedState
  PointView -up-|> View
  BaseSavedState -up-|> AbsSavedState
  ScoreTextView -up-|> View
  BaseSavedState -up-|> AbsSavedState
  LayoutParams -up-|> MarginLayoutParams
  MarginLayoutParams -up-|> LayoutParams
  BaseSavedState -up-|> AbsSavedState
  RouteSchematicDiagramLayout -up-|> LinearLayout
  RouteSchematicDiagramLayout o-- RouteSchematicDiagramLayout : self
  RouteSchematicDiagramLayout o-- RouteData : routeData
  LayoutParams -up-|> MarginLayoutParams
  MarginLayoutParams -up-|> LayoutParams
  BaseSavedState -up-|> AbsSavedState
  ScrollTextView -up-|> LinearLayout
  LayoutParams -up-|> MarginLayoutParams
  MarginLayoutParams -up-|> LayoutParams
  BaseSavedState -up-|> AbsSavedState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
